next version of socketio

--- a/twitter_node/index.html
+++ b/twitter_node/index.html
@@ -11,7 +11,7 @@
 </style>
 <body>
 <a class="twitter-share-button"
-href="https://twitter.com/share">
+  href="https://twitter.com/share">
 Tweet
 </a>
 <script type="text/javascript">
@@ -23,98 +23,107 @@ window.twttr=(function(d,s,id){var t,js,fjs=d.getElementsByTagName(s)[0];if(d.ge
 </div>
 <script>
 $.urlParam = function(name){
-try{
-var results = new RegExp('[\?&amp;]' + name + '=([^&amp;#]*)').exec(window.location.href);
-return results[1] || 0;
-}catch(e){}
+  try{
+    var results = new RegExp('[\?&amp;]' + name + '=([^&amp;#]*)').exec(window.location.href);
+    return results[1] || 0;
+  }catch(e){}
 }
+
 var NB_TWEETS=5;
 var hover_bubble=[];
 var showTweets=true;
 var socket=null;
 window.onload = function() {
-var baseLayer = L.tileLayer(
-'http://korona.geog.uni-heidelberg.de:8008/tms_rg.ashx?z={z}&x={x}&y={y}',{
-attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>',
-maxZoom: 18
-});
-var cfg = {
-"radius": 5,
-"maxOpacity": .8,
-"scaleRadius": false,
-"useLocalExtrema": true,
-latField: 'lat',
-lngField: 'lng',
-valueField: 'count'
+
+  var baseLayer = L.tileLayer(
+  'http://korona.geog.uni-heidelberg.de:8008/tms_rg.ashx?z={z}&x={x}&y={y}',{
+    attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>',
+    maxZoom: 18
+  });
+
+  var cfg = {
+    "radius": 5,
+    "maxOpacity": .8,
+    "scaleRadius": false,
+    "useLocalExtrema": true,
+    latField: 'lat',
+    lngField: 'lng',
+    valueField: 'count'
+  };
+
+  heatmapLayer = new HeatmapOverlay(cfg);
+  map = new L.Map('map-canvas', {
+    center: new L.LatLng(46.99,2.58),
+    zoom:   7,
+    minZoom:5,
+    layers: [baseLayer, heatmapLayer]
+  });
+  map.on('zoomend',updateSocket);
+  map.on('dragend',updateSocket);
+  if(bounds=$.urlParam('bounds')){
+    rect=JSON.parse(bounds);
+    map.fitBounds(L.latLngBounds([rect[1],rect[0]],[rect[3],rect[2]]));
+  }
+  // All of this to add a simple button on top of the map
+  MyControl = L.Control.extend({
+    options: {
+      position: 'topleft'
+    },
+    onAdd: function (map) {
+      // create the control container with a particular class name
+      var container = L.DomUtil.create('div', 'my-custom-control');
+      controlUI = L.DomUtil.create('button', 'toggle-tweet', container);
+      return container;
+    }
+  });
+  map.addControl(new MyControl());
+  var myBut=$(".toggle-tweet")
+  myBut.text("Hide");
+  myBut.click(toggleTweets);
+  // End of button extra
+
+  for(var i=0;i<NB_TWEETS;i++){
+    hover_bubble.push(new L.Popup({ offset: new L.Point(0,-10), closeButton: false, autoPan: false }));
+  }
+  startSocket();
 };
-heatmapLayer = new HeatmapOverlay(cfg);
-map = new L.Map('map-canvas', {
-center: new L.LatLng(46.99,2.58),
-zoom: 7,
-minZoom:5,
-layers: [baseLayer, heatmapLayer]
-});
-map.on('zoomend',updateSocket);
-map.on('dragend',updateSocket);
-if(bounds=$.urlParam('bounds')){
-rect=JSON.parse(bounds);
-map.fitBounds(L.latLngBounds([rect[1],rect[0]],[rect[3],rect[2]]));
-}
-// Ajouter le petit bouton en haut de la page
-MyControl = L.Control.extend({
-options: {
-position: 'topleft'
-},
-onAdd: function (map) {
-// créer le container control
-var container = L.DomUtil.create('div', 'my-custom-control');
-controlUI = L.DomUtil.create('button', 'toggle-tweet', container);
-return container;
-}
-});
-map.addControl(new MyControl());
-var myBut=$(".toggle-tweet")
-myBut.text("Hide");
-myBut.click(toggleTweets);
-// Fin de boutton extra
-for(var i=0;i<NB_TWEETS;i++){
-hover_bubble.push(new L.Popup({ offset: new L.Point(0,-10), closeButton: false, autoPan: false }));
-}
-startSocket();
-};
+
 function addPoint(tweet)
 {
-if(tweet.geo){
-pt={lng:tweet.geo.coordinates[1],lat:tweet.geo.coordinates[0],count:1};
-if(showTweets){
-bubble=hover_bubble.shift();
-bubble.setContent("<img src="+tweet.user.profile_image_url+" align=left><b>@"+tweet.user.screen_name+"</b><br>"+tweet.text)
-.setLatLng(tweet.geo.coordinates)
-.addTo(map);
-hover_bubble.push(bubble);
+  if(tweet.geo){
+    pt={lng:tweet.geo.coordinates[1],lat:tweet.geo.coordinates[0],count:1};
+    if(showTweets){
+      bubble=hover_bubble.shift();
+      bubble.setContent("<img src="+tweet.user.profile_image_url+" align=left><b>@"+tweet.user.screen_name+"</b><br>"+tweet.text)
+      .setLatLng(tweet.geo.coordinates)
+      .addTo(map);
+      hover_bubble.push(bubble);
+    }
+    heatmapLayer.addData(pt);
+  }
 }
-heatmapLayer.addData(pt);
-}
-}
+
 function toggleTweets()
 {
-showTweets=!showTweets;
-console.log(showTweets);
+  showTweets=!showTweets;
+  console.log(showTweets);
 }
+
 function updateSocket(){
-window.history.pushState("TweetOMap","TweetOMap","/?bounds=["+map.getBounds().toBBoxString()+"]");
-if(socket)socket.emit("recenter",map.getBounds().toBBoxString());
+  window.history.pushState("TweetOMap","TweetOMap","/?bounds=["+map.getBounds().toBBoxString()+"]");
+  if(socket)socket.emit("recenter",map.getBounds().toBBoxString());
 }
 function startSocket(){
-socket = io.connect('3a36aefee6.testurl.ws', {query: "bounds=["+map.getBounds().toBBoxString()+"]"});
-socket.on('stream', function(tweet){
-addPoint(tweet);
-});
-socket.on('reconnect',function(){
-console.log("Reconnect");
-updateSocket();
-});
+  socket = io.connect('http://localhost:8080', {query: "bounds=["+map.getBounds().toBBoxString()+"]"});
+  socket.on('stream', function(tweet){
+    addPoint(tweet);
+  });
+  socket.on('reconnect',function(){
+    console.log("Reconnect");
+    updateSocket();
+  });
 }
+
 </script>
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
